# dumb-auth

./: .gitignore  .pg_format  Cargo.toml  Cross.toml  build.rs  wrk.lua
.github/actions/docker/: action.yml
.github/workflows/: dev-build.yml  release.yml  verify.yml
docker/dumb-auth/: Dockerfile
docker/dumb-auth-swag-mod/: Dockerfile
docker/dumb-auth-swag-mod/root/defaults/nginx/: dumb-auth-location.conf.sample  dumb-auth-server.conf.sample
docker/dumb-auth-swag-mod/root/etc/s6-overlay/s6-rc.d/init-mod-swag-dumb-auth/: run  up
docker/dumb-auth-swag-mod/root/etc/s6-overlay/s6-rc.d/svc-mod-swag-dumb-auth/: run
examples/nginx/: dumb-auth.conf  nginx.conf
examples/nginx/conf.d/: default.conf
examples/nginx/www/: index.html
frontend/: index.html  login.html
nginx/: dumb-auth.conf
nginx/conf.d/: default.conf
src/: app.rs  auth.rs  basic.rs  bearer.rs  config.rs  cookie.rs  lib.rs  login.rs  main.rs  password.rs  passwords.rs  sessions.rs
src/auth/: auth_request.rs  authenticator.rs  mod.rs
src/auth/methods/: basic.rs  bearer.rs  mod.rs  session.rs
src/cli/: common.rs  mod.rs  passwd.rs  run.rs
src/datastore/: lmdb.rs  memory.rs  mod.rs  sqlite.rs
src/datastore/lmdb/: mod.rs  reader.rs  schema.rs  writer.rs
src/datastore/migrations/: 20250126053826_init.sql
tests/: common.rs  integration_test.rs  nginx_e2e_test.rs
tests/common/: mod.rs
tests/integration/: basic.rs  bearer.rs  interactive.rs  mod.rs  session.rs
