[package]
name = "dumb-auth"
version = "0.1.0"
authors = ["Dana Sommerich"]
edition = "2021"
description = "A stupid-simple, super-lightweight, single-user auth server."
repository = "https://github.com/sommd/dumb-auth"
license = "AGPL-3.0-only"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", default-features = false, features = ["http1", "json", "tokio"] }
axum-extra = { version = "0.10.0", default-features = false, features = ["cookie", "typed-header"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
duration-str = { version = "0.12.0", default-features = false, features = ["serde", "time"] }
env_logger = "0.11.6"
form_urlencoded = "1.2.1"
log = { version = "0.4.22" }
password-hash = "0.5.0"
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0.217", features = ["derive"] }
subtle = { version = "2.6.1", default-features = false }
time = "0.3.37"
tokio = { version = "1.42.0", features = ["rt", "macros", "rt-multi-thread"] }
zeroize = "1.8.1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dev-dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["cookies", "json"] }
tokio = { version = "1.42.0", features = ["time"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
