[package]
name = "dumb-auth"
version = "0.0.0"
authors = ["Dana Sommerich"]
edition = "2021"
description = "A stupid-simple, super-lightweight, single-user auth server."
repository = "https://github.com/sommd/dumb-auth"
license = "AGPL-3.0-only"
publish = false

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.85"
axum = { version = "0.8.1", default-features = false, features = ["http1", "json", "tokio", "tracing"] }
axum-extra = { version = "0.10.0", default-features = false, features = ["cookie", "typed-header"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
duration-str = { version = "0.12.0", default-features = false, features = ["serde", "time"] }
form_urlencoded = "1.2.1"
heed = { version = "0.21.0", default-features = false, features = ["serde-bincode"], optional = true }
password-hash = "0.5.0"
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", default-features = false, features = ["macros", "migrate", "runtime-tokio"], optional = true }
subtle = { version = "2.6.1", default-features = false }
thiserror = "2.0.11"
time = "0.3.37"
tokio = { version = "1.42.0", features = ["rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zeroize = "1.8.1"

[dev-dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["cookies", "json"] }
serial_test = "3.2.0"
tempfile = "3.16.0"
tokio = { version = "1.42.0", features = ["time"] }
tokio-util = { version = "0.7.13", features = ["rt"] }

[features]
default = ["lmdb", "sqlite"]
lmdb = ["dep:heed"]
sqlite = ["dep:sqlx", "sqlx/sqlite"]
sqlite-unbundled = ["dep:sqlx", "sqlx/sqlite-unbundled"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
